Assertion failure: ViewportUtils::IsZoomedContentRoot(f) in accessible/tests/mochitest/hittest/test_browser.html with allow_zooming = true
Categories
(Core :: Panning and Zooming, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox75 | --- | unaffected |
firefox76 | --- | unaffected |
firefox77 | --- | unaffected |
firefox78 | --- | fixed |
People
(Reporter: tnikkel, Assigned: tnikkel)
References
Details
Attachments
(1 file)
Assignee | ||
Comment 1•5 years ago
|
||
When we hit the assert the root content document is https://searchfox.org/mozilla-central/rev/dc4560dcaafd79375b9411fdbbaaebb0a59a93ac/testing/mochitest/harness.xhtml . It is basically a xul document, and look xul document it does not have a root scroll frame. The frame we hit the assert on is fixed pos, so it passes the fixed pos part of IsZoomedContentRoot here https://searchfox.org/mozilla-central/rev/dc4560dcaafd79375b9411fdbbaaebb0a59a93ac/layout/base/ViewportUtils.cpp#139 but there is no root scroll frame so it still returns null.
We should only his this when there is no root scroll frame. So to fix this I decided to make the existing code conditional on having a root scroll frame and then write a bunch of pretty strong asserts that we are in this exact edge case if we don't have a root scroll frame.
Updated•5 years ago
|
Updated•5 years ago
|
Comment 3•5 years ago
|
||
bugherder |
Description
•